# paper_tracker

./: .gitignore  README.md  config.example.yaml  pyproject.toml
paper_downloader/: arxiv.py  cli.py  web.py
paper_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper_downloader/static/: app.js  style.css
paper_downloader/templates/: index.html
